--- a/angular/src/app/components/new-user/new-user.component.html
+++ b/angular/src/app/components/new-user/new-user.component.html
@@ -3,8 +3,7 @@
 <br><br> -->
 
 
-<!-- <app-users></app-users> -->
-<!-- <form>
+
 <div class=Details>
    <div class="a">
      <h4>:הכנס שם משתמש</h4>
@@ -34,9 +33,7 @@
 </div>
 <br>
 <button (click) = "addcustomer()"  mat-button>אישור</button> &nbsp;&nbsp;
-<button type="button" (click) = "precentt()" mat-button>לשלב הבא</button>  -->
-<!-- לזמן את הפונקציה של הממוצע מהברירת מחדל -->
-<!-- </form> -->
+<button type="button" (click) = "precentt()" mat-button>לשלב הבא</button>
 
 
 
@@ -44,8 +41,7 @@
 <h1>משתמשים חדשים</h1>
 <br><br>
 
-<!-- <app-users></app-users> -->
-<!-- (ngSubmit)="onFormSubmit(detailsForm) -->
+
 <form  class="formH form-group" #detailsForm="ngForm">
 <div class=Details>
    <div class="a">
@@ -132,5 +128,3 @@
 <br>
 <button (click) = "addcustomer()"  mat-button>אישור</button> &nbsp;&nbsp;
 <button type="button" (click) = "precentt()" mat-button>לשלב הבא</button> 
-<!-- לזמן את הפונקציה של הממוצע מהברירת מחדל -->
-<!-- </form> -->
